--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>TNG - LNBITS version</title>
+    <meta name="description" content="TNG - LNBITS version">
+    <meta name="keywords" content="TNG - LNBITS version">
+    <meta name="google" content="notranslate">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/Picard.png" />
+    <link rel="image_src" href="%PUBLIC_URL%/Picard.png" />
     <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Picard.png" />
     <meta
       name="description"
       content="Web site created using create-react-app"
