--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,15 @@
     <meta name="description" content="TNG - LNBITS version">
     <meta name="keywords" content="TNG - LNBITS version">
     <meta name="google" content="notranslate">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/Picard.png" />
-    <link rel="image_src" href="%PUBLIC_URL%/Picard.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/jasonbohio_Picard_answering_questions_at_a_conference_with_an_a_b8c62bfe-68ed-4921-869f-3c29c7786841.png" />
+    <link rel="image_src" href="%PUBLIC_URL%/jasonbohio_Picard_answering_questions_at_a_conference_with_an_a_b8c62bfe-68ed-4921-869f-3c29c7786841.png" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Picard.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/jasonbohio_Picard_answering_questions_at_a_conference_with_an_a_b8c62bfe-68ed-4921-869f-3c29c7786841.png" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/jasonbohio_Picard_answering_questions_at_a_conference_with_an_a_b8c62bfe-68ed-4921-869f-3c29c7786841.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
